--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,23 +1,25 @@
 spring.application.name=isl-backend
+
 # MySQL Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/isl_learn
 spring.datasource.username=isl_user
 spring.datasource.password=isl
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Show SQL statements in the logs
 # JPA (Hibernate) settings for creating or updating tables automatically
 # It will auto-create tables if needed
 spring.jpa.hibernate.ddl-auto=update
-
-# Show SQL statements in the logs
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-#Spring Boot is properly configured to serve these static resources
+#Spring Boot configured to serve the static resources
 spring.mvc.static-path-pattern=/images/**
+spring.resources.static-locations=classpath:/static/
 
 #don't print banner
 #spring.main.banner-mode=off
 
 #show only warnings and errors
-logging.level.root=warn
+logging.level.root=info
