Added email service and controller for contact page

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,12 @@ spring.resources.static-locations=classpath:/static/
 
 #show only warnings and errors
 logging.level.root=info
+
+#Configure email properties
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=indianSignLanguage00@gmail.com
+spring.mail.password=yxai vivt utge wknx
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
