Usr login and registration backend

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,7 +19,7 @@ spring.mvc.static-path-pattern=/images/**
 spring.resources.static-locations=classpath:/static/
 
 #don't print banner
-#spring.main.banner-mode=off
+spring.main.banner-mode=off
 
 #show only warnings and errors
 logging.level.root=info
@@ -32,3 +32,7 @@ spring.mail.password=yxai vivt utge wknx
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
+
+# JWT Configuration
+jwt.secret=your_jwt_secret_key
+jwt.expiration=3600000 # Expiration time in milliseconds (1 hour)
